...
                                    ),
                              ),
                            ),
                            Container(
                              width: 200.0,
                              child: TextFormField(
                                key: ValueKey('FullName_zn0k'),
                                controller: _model.fullNameTextController,
                                focusNode: _model.fullNameFocusNode,
                                autofocus: false,
                                obscureText: false,
                                decoration: InputDecoration(
                                  isDense: true,
...
                                    .asValidator(context),
                              ),
                            ),
                          ],
                        ),
                        FlutterFlowDropDown<String>(
                          key: ValueKey('Major_ihwd'),
                          controller: _model.majorValueController ??=
                              FormFieldController<String>(null),
                          options: [
                            'Undecided',
                            'Art',
                            'Business',
                            'Computer Science',
                            'Communications',
                            'Economics',
                            'Engineering ',
                            'Nursing',
                            'Physics ',
                            'Psychology',
...
                          hidesUnderline: true,
                          isOverButton: false,
                          isSearchable: false,
                          isMultiSelect: false,
                        ),
                        FlutterFlowDropDown<String>(
                          key: ValueKey('AcademicStatus_ph1r'),
                          controller: _model.academicStatusValueController ??=
                              FormFieldController<String>(null),
                          options: ['Undergraduate', 'Graduate', 'Alumni'],
                          onChanged: (val) => safeSetState(
                              () => _model.academicStatusValue = val),
                          width: 200.0,
                          height: 40.0,
                          textStyle:
                              FlutterFlowTheme.of(context).bodyMedium.override(
...
                          isOverButton: false,
                          isSearchable: false,
                          isMultiSelect: false,
                        ),
                        if (_model.academicStatusValue == '')
                          FlutterFlowDropDown<String>(
                            key: ValueKey('Year_h1af'),
                            controller: _model.yearValueController ??=
                                FormFieldController<String>(null),
                            options: [
                              'Freshman',
                              'Sophmore',
                              'Junior',
                              'Senior'
                            ],
                            onChanged: (val) =>
                                safeSetState(() => _model.yearValue = val),
...
                            ],
                          ),
                        ),
                        Align(
                          alignment: AlignmentDirectional(0.0, 0.0),
                          child: FFButtonWidget(
                            key: ValueKey('Button_bvm3'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'ONBOARDING_PAGE_SIGN_UP_BTN_ON_TAP');
                              logFirebaseEvent('Button_backend_call');

                              await currentUserReference!
...
