...
                            EdgeInsetsDirectional.fromSTEB(0.0, 15.0, 0.0, 0.0),
                        child: Column(
                          children: [
                            Align(
                              alignment: Alignment(0.0, 0),
                              child: FlutterFlowButtonTabBar(
                                key: ValueKey('TabBar_cd46'),
                                useToggleButtonStyle: false,
                                labelStyle: FlutterFlowTheme.of(context)
                                    .titleMedium
                                    .override(
                                  font: GoogleFonts.lato(
                                    fontWeight: FlutterFlowTheme.of(context)
...
                                elevation: 0.0,
                                buttonMargin: EdgeInsetsDirectional.fromSTEB(
                                    8.0, 0.0, 8.0, 0.0),
                                padding: EdgeInsets.all(2.0),
                                tabs: [
                                  Tab(
                                    key: ValueKey('Tab_wnge'),
                                    text: 'Study Sessions',
                                  ),
                                  Tab(
                                    text: 'Tutors',
                                  ),
                                ],
                                controller: _model.tabBarController,
...
                                                                              14.0),
                                                                  shape: BoxShape
                                                                      .rectangle,
                                                                ),
                                                                child: Column(
                                                                  key: ValueKey(
                                                                      'Column_lfxx'),
                                                                  mainAxisSize:
                                                                      MainAxisSize
                                                                          .max,
                                                                  children: [
                                                                    Padding(
                                                                      padding: EdgeInsetsDirectional.fromSTEB(
...
