...
                              24.0, 0.0, 24.0, 0.0),
                          child: Column(
                            mainAxisSize: MainAxisSize.max,
                            mainAxisAlignment: MainAxisAlignment.start,
                            children: [
                              TextFormField(
                                key: ValueKey('EmailTextField_swaw'),
                                controller: _model.emailTextFieldTextController,
                                focusNode: _model.emailTextFieldFocusNode,
                                onChanged: (_) => EasyDebounce.debounce(
                                  '_model.emailTextFieldTextController',
                                  Duration(milliseconds: 2000),
                                  () => safeSetState(() {}),
...
                                    .emailTextFieldTextControllerValidator
                                    .asValidator(context),
                              ),
                              Container(
                                width: double.infinity,
                                child: TextFormField(
                                  key: ValueKey('PasswordTextField_g61v'),
                                  controller:
                                      _model.passwordTextFieldTextController,
                                  focusNode: _model.passwordTextFieldFocusNode,
                                  autofocus: false,
                                  textInputAction: TextInputAction.done,
                                  obscureText:
...
                            elevation: 0.0,
                            borderRadius: BorderRadius.circular(8.0),
                          ),
                        ),
                      ),
                      FFButtonWidget(
                        key: ValueKey('SignupButton_wu9o'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'LOGIN_PAGE_PAGE_SignupButton_ON_TAP');
                          logFirebaseEvent('SignupButton_bottom_sheet');
                          await showModalBottomSheet(
                            isScrollControlled: true,
...
